--- a/configure.ac
+++ b/configure.ac
@@ -270,7 +270,7 @@ if test "x$enable_debug" = xyes; then
     fi
 fi
 
-CFLAGS="$CFLAGS -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512"
+CFLAGS="$CFLAGS -DBLAKE3_NO_AVX512"
 ##CFLAGS="$CFLAGS -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512"
 
 
